--- a/src/napari_npe2_test/napari.yaml
+++ b/src/napari_npe2_test/napari.yaml
@@ -1,10 +1,7 @@
 name: napari-npe2-test
-display_name: Segmentation / Labeling > Connectect component labeling
+display_name: napari-npe2-test
 contributions:
   commands: 
-    - id: napari-npe2-test.make_qwidget
-      python_name: napari_npe2_test._widget:ExampleQWidget
-      title: Make example QWidget
     - id: napari-npe2-test.make_magic_widget
       python_name: napari_npe2_test._widget:example_magic_widget
       title: Make example magic widget
@@ -12,10 +9,8 @@ contributions:
       python_name: napari_npe2_test._widget:example_function_widget
       title: Make example function widget   
   widgets:
-    - command: napari-npe2-test.make_qwidget
-      display_name: Example QWidget
     - command: napari-npe2-test.make_magic_widget
-      display_name: Example Magic Widget
+      display_name: Segmentation / labeling > Otsu Labeling 2 (nnpe2t)
     - command: napari-npe2-test.make_func_widget
       autogenerate: true
-      display_name: Example Function Widget 
+      display_name: Segmentation / labeling > Otsu labeling (nnpe2t)
